quantifier node in progress